--- a/env.example
+++ b/env.example
@@ -7,6 +7,10 @@ OPENAI_API_KEY=your_openai_api_key_here
 # Supabase JWT Secret (for backend API authentication)
 SUPABASE_JWT_SECRET=your_supabase_jwt_secret_here
 
+# VinSolutions API Credentials (for inventory sync)
+VINSOLUTIONS_API_KEY=your_vinsolutions_api_key_here
+VINSOLUTIONS_DEALER_ID=your_vinsolutions_dealer_id_here
+
 # Cohere API Key (alternative embedding provider)
 # COHERE_API_KEY=your_cohere_api_key_here
 
