--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.52.1",
     "@types/papaparse": "^5.3.16",
     "autoprefixer": "^10.4.20",
