--- a/env.example
+++ b/env.example
@@ -32,3 +32,13 @@ VONAGE_PHONE_NUMBER=your_vonage_phone_number_here
 #SUPABASE_HOST=aws-0-us-west-1.pooler.supabase.com
 #SUPABASE_PORT=6543
 #SUPABASE_DBNAME=postgres
+
+# Stripe Configuration
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+# Supabase Configuration (for backend)
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_url_here
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
