--- a/env.example
+++ b/env.example
@@ -21,10 +21,16 @@ SUPABASE_JWT_SECRET=your_supabase_jwt_secret_here
 # SIMILARITY_THRESHOLD=0.7
 # LOG_LEVEL=INFO
 
-# Vonage SMS Configuration
+# Vonage SMS Configuration (Legacy)
 VONAGE_API_KEY=your_vonage_api_key_here
 VONAGE_API_SECRET=your_vonage_api_secret_here
 VONAGE_PHONE_NUMBER=your_vonage_phone_number_here
+
+# Telnyx SMS Configuration
+TELNYX_API_KEY=your_telnyx_api_key_here
+TELNYX_PHONE_NUMBER=your_telnyx_phone_number_here
+TELNYX_MESSAGING_PROFILE_ID=your_telnyx_messaging_profile_id_here
+TELNYX_WEBHOOK_SECRET=your_telnyx_webhook_secret_here
 
 # Database configuration
 #SUPABASE_USER=supabase_username
