--- a/env.example
+++ b/env.example
@@ -21,10 +21,18 @@ SUPABASE_JWT_SECRET=your_supabase_jwt_secret_here
 # SIMILARITY_THRESHOLD=0.7
 # LOG_LEVEL=INFO
 
-# Vonage SMS Configuration
+# Vonage SMS Configuration (Legacy)
 VONAGE_API_KEY=your_vonage_api_key_here
 VONAGE_API_SECRET=your_vonage_api_secret_here
 VONAGE_PHONE_NUMBER=your_vonage_phone_number_here
+
+# WhatsApp Business API Configuration
+# Get these from Meta Business Manager -> WhatsApp Business API
+WHATSAPP_ACCESS_TOKEN=your_whatsapp_access_token_here
+WHATSAPP_PHONE_NUMBER_ID=your_whatsapp_phone_number_id_here
+WHATSAPP_WEBHOOK_VERIFY_TOKEN=your_custom_verify_token_here
+WHATSAPP_APP_SECRET=your_whatsapp_app_secret_here
+WHATSAPP_API_VERSION=v21.0
 
 # Database configuration
 #SUPABASE_USER=supabase_username
