--- a/render.yaml
+++ b/render.yaml
@@ -37,4 +37,14 @@ services:
       - key: SIMILARITY_THRESHOLD
         value: "0.7"
       - key: LOG_LEVEL
-        value: INFO 
+        value: INFO
+      - key: WHATSAPP_ACCESS_TOKEN
+        sync: false
+      - key: WHATSAPP_PHONE_NUMBER_ID
+        sync: false
+      - key: WHATSAPP_WEBHOOK_VERIFY_TOKEN
+        sync: false
+      - key: WHATSAPP_APP_SECRET
+        sync: false
+      - key: WHATSAPP_API_VERSION
+        value: v21.0 
