--- a/env.example
+++ b/env.example
@@ -26,10 +26,12 @@ VONAGE_API_KEY=your_vonage_api_key_here
 VONAGE_API_SECRET=your_vonage_api_secret_here
 VONAGE_PHONE_NUMBER=your_vonage_phone_number_here
 
-# Telnyx SMS Configuration
+## (Removed) WhatsApp Business API Configuration
+
+# Telnyx Messaging Configuration
 TELNYX_API_KEY=your_telnyx_api_key_here
-TELNYX_PHONE_NUMBER=your_telnyx_phone_number_here
 TELNYX_MESSAGING_PROFILE_ID=your_telnyx_messaging_profile_id_here
+TELNYX_PHONE_NUMBER=your_telnyx_phone_number_here
 TELNYX_WEBHOOK_SECRET=your_telnyx_webhook_secret_here
 
 # Database configuration
